# marble-next

./: .env.test  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDES.md  README.md  TASKS.md  docker-compose.test.yml
crates/marble-core/: Cargo.toml
crates/marble-core/src/: error.rs  lib.rs
crates/marble-db/: Cargo.toml
crates/marble-db/migrations/: 20250404000001_create_users.sql  20250404000002_create_folders.sql  20250404000003_create_files.sql
crates/marble-db/src/: api.rs  auth.rs  config.rs  error_new.rs  lib.rs
crates/marble-db/src/error/: mod.rs
crates/marble-db/src/models/: file.rs  folder.rs  mod.rs  user.rs
crates/marble-db/src/repositories/: file_repository.rs  folder_repository.rs  mod.rs  user_repository.rs
crates/marble-db/src/tests/: combined_repository_tests.rs  migration_tests.rs  mod.rs
crates/marble-read-processor/: Cargo.toml
crates/marble-read-processor/src/: lib.rs
crates/marble-storage/: Cargo.toml
crates/marble-storage/src/: api.rs  config.rs  error.rs  hash.rs  lib.rs  mock.rs
crates/marble-storage/src/api/: mod.rs  tenant.rs
crates/marble-storage/src/backends/: hash.rs  mod.rs  opendal_adapter.rs  raw.rs  user.rs
crates/marble-storage/src/impl/: mod.rs  storage.rs  tenant_storage.rs
crates/marble-storage/src/services/: hasher.rs  mod.rs
crates/marble-storage/src/tests/: mod.rs  raw_storage_test.rs  tenant_storage_test.rs
crates/marble-storage/tests/: hash_storage_test.rs
crates/marble-write-processor/: Cargo.toml
crates/marble-write-processor/src/: lib.rs
crates/marble_core/: Cargo.toml
crates/marble_core/src/: lib.rs
scripts/: setup_test_db.sh  simple_test_migrations.sh  test_migrations.sh  verify_schema.sh
spec/: architecture.md  crate_dependencies.md  data_flow.md  database_schema.md  index.md  marble_core.md  marble_db.md  marble_read_processor.md  marble_webdav.md  read_side.md  spec.md  standards.md  write_side.md
spec/code_samples/database/: aliases.sql  cache_invalidations.sql  document_links.sql  embedded_in_published.sql  file_versions.sql  files.sql  folders.sql  frontmatter.sql  processing_queue.sql  published_content.sql  users.sql
spec/crates/: index.md  marble-core.md  marble_db.md  marble_db_api.md  marble_db_implementation.md  marble_db_overview.md  marble_storage.md  marble_webdav.md  marble_write_processor.md  template.md
spec/dependencies/: axum.md  chrono.md  dav_server.md  dotenv.md  http.md  index.md  opendal.md  serde.md  sqlx.md  template.md  tower.md  tower_http.md  tracing.md
spec/domain/: architecture_diagram.md  authentication.md  crate_dependencies.md  database_schema.md  database_schema_concise.md  database_schema_current.md  database_schema_questions.md  glossary.md  index.md  storage_architecture.md  template.md
spec/handoffs/: database_models_implementation.md  database_repositories_implementation.md  database_schema.md  database_schema_implementation.md  database_testing.md  database_testing_fixes.md  dependencies_update.md  documentation_restructuring.md  index.md  marble_db_implementation.md  marble_storage_implementation.md  opendal_adapter_implementation.md  template.md  webdav_implementation.md
