[workspace]
resolver = "2"
members = [
    "crates/marble-core",
    "crates/marble-db",
    "crates/marble-storage",
    "crates/marble-write-processor",
    "crates/marble-read-processor",
    "bin/marble-webdav",
]

[workspace.dependencies]
# Internal crates
marble-core = { path = "crates/marble-core" }
marble-db = { path = "crates/marble-db" }
marble-storage = { path = "crates/marble-storage" }
marble-write-processor = { path = "crates/marble-write-processor" }
marble-read-processor = { path = "crates/marble-read-processor" }

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "time", "uuid", "migrate"] }

# Async runtime
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "Marble Next project"
