[workspace]
resolver = "2"
members = [
    "crates/marble-core",
    "crates/marble-db",
    "crates/marble-storage",
    "crates/marble-write-processor",
    "crates/marble-read-processor",
    "bin/marble-webdav",
]

[workspace.dependencies]
# Internal crates
marble-core = { path = "crates/marble-core" }
marble-db = { path = "crates/marble-db" }
marble-storage = { path = "crates/marble-storage" }
marble-write-processor = { path = "crates/marble-write-processor" }
marble-read-processor = { path = "crates/marble-read-processor" }

# Database
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "time",
    "uuid",
    "migrate",
    "macros",
    "chrono",
    "ipnetwork",
    "bit-vec"
] }

# Async runtime
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "test-util"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec", "io"] }
async-trait = "0.1.88"

# Configuration
dotenv = "0.15.0"

# Logging and instrumentation
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Date and time
chrono = { version = "0.4.40", features = ["serde"] }

# Content handling
gray_matter = "0.2.8"
base64 = "0.22.1"
mime = "0.3.17"
mime_guess = "2.0.5"

# Storage
opendal = { version = "0.45.1", features = ["services-s3", "services-fs"] }
blake2b_simd = "1.0.2"

# Error handling
thiserror = "1.0.58"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
description = "Marble Next project"
