[package]
name = "marble-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Database schema and operations for Marble"

[dependencies]
marble-core.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
dotenv.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
