[package]
name = "marble-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Storage backends for Marble"

[dependencies]
# Internal crates
marble-core.workspace = true
marble-db.workspace = true

# Storage abstraction
opendal = { version = "0.45.1", features = ["services-s3", "services-fs"] }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid = { version = "1.7.0", features = ["v4", "serde"] }
base64.workspace = true
blake2b_simd = "1.0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.10.1"
