[package]
name = "marble-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Storage backends for Marble"

[dependencies]
# Internal crates
marble-core.workspace = true
marble-db.workspace = true
sqlx.workspace = true

# Storage abstraction
opendal.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
base64.workspace = true
blake2b_simd.workspace = true
mime.workspace = true
mime_guess.workspace = true
futures.workspace = true
bytes.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
